--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,19 +2,22 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "My Python Debugger: Flask",
+            "name": "app.py",
+            "type": "debugpy",
+            "request": "launch",
+            "program": "${workspaceFolder}/app.py",
+            "envFile": "${workspaceFolder}/.env"
+        },
+        {
+            "name": "Flask debug",
             "type": "debugpy",
             "request": "launch",
             "module": "flask",
-            "env": {
-                "FLASK_APP": "app.py",
-                "FLASK_DEBUG": "1"
-            },
+            "envFile": "${workspaceFolder}/.env",
             "args": [
                 "run",
                 "--debug"
-            ],
-            "jinja": true
-        }
+            ]
+        },
     ]
 }
