--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,7 @@ jobs:
 
     - name: Deploy locally
       run: |
-        BOT_TOKEN={{ secrets.BOT_TOKEN }} \
+        BOT_TOKEN=${{ secrets.BOT_TOKEN }} \
         FLASK_APP=app.py \
         python -m waitress-serve --port=5000 app:app
         
