--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Flask CI/CD
+name: Deploy to server
 
 on:
   push:
@@ -8,24 +8,10 @@ jobs:
   build:
     runs-on: self-hosted
     steps:
-
-    - name: Checkout repository
-      uses: actions/checkout@v2
-
-    - name: Set up Python 3.8
-      uses: actions/setup-python@v2
+    - name: SSH to server
+      uses: appleboy/ssh-action@master
       with:
-        python-version: 3.9
-
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
-        pip install waitress
-
-    - name: Deploy locally
-      run: |
-        BOT_TOKEN=${{ secrets.BOT_TOKEN }} \
-        FLASK_APP=app.py \
-        waitress-serve --port=5000 app:app
-        
+        host: ${{ secrets.HOST }}
+        username: ${{ secrets.USERNAME }}
+        key: ${{ secrets.SSH_KEY }}
+        port: ${{ secrets.PORT }}  
