--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -19,5 +19,17 @@
                 "--debug"
             ]
         },
+        {
+            "name": "Flask debug (listen on all interfaces)",
+            "type": "debugpy",
+            "request": "launch",
+            "module": "flask",
+            "envFile": "${workspaceFolder}/.env",
+            "args": [
+                "run",
+                "--debug",
+                "--host=0.0.0.0"
+            ]
+        },
     ]
 }
